--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,6 @@ style = "pep440"
 versionfile_source = "maze_ipp/_version.py"
 versionfile_build = "maze_ipp/_version.py"
 tag_prefix = ""
+
+[tool.isort]
+known_first_party = ["maze_ipp"]
