--- a/environment.yaml
+++ b/environment.yaml
@@ -31,6 +31,7 @@ dependencies:
     - omni-archive
     - rich
     - parse
+    - exceptiongroup
     - git+https://github.com/morphocut/morphocut.git@loki
     - git+https://github.com/moi90/pyecotaxa.git@cli
     - git+https://github.com/MOSAiC-Zooplankton-Image-Analyses/lokidata.git
